--- a/data/equipment/consumable-16-WAUq4TB4Q9FDxWFz.htm
+++ b/data/equipment/consumable-16-WAUq4TB4Q9FDxWFz.htm
@@ -1,7 +1,6 @@
 Name: Candle of Invocation
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Bougie d'invocation
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -9,7 +8,7 @@ Nom:
 <p>Characters who cast divine spells and worship the deity emblazoned on the candle can perform their daily preparations within 10 feet of the lit candle to gain two additional spell slots for the day, each at half the highest spell level the character can cast (for example, 4th level slots if the caster can cast 8th-level spells). Prepared casters must prepare spells in these spell slots as they do for all their other spell slots.</p>
 <p>A caster's additional spell slots from the candle are lost the next time that caster performs their daily preparations. No one can benefit from more than one candle of invocation in a day, but multiple characters can benefit from a single candle's effects.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Cette bougie dorée porte le symbole d'une divinité spécifique sur sa surface, entouré de l'iconographie de la foi de cette divinité. Une fois allumée, cette bougie brûle pendant 1 heure et ne peut pas être éteinte.</p>
-<p>Les personnages qui lancent des sorts divins et vénèrent la divinité inscrite sur la bougie peuvent effectuer leurs préparations quotidiennes à moins de 3 mètres de la bougie allumée pour gagner deux emplacements de sorts supplémentaires pour la journée, chacun à la moitié du niveau de sort le plus élevé que le personnage peut lancer (par exemple, des emplacements de 4ème niveau si le lanceur peut lancer des sorts de 8ème niveau). Les lanceurs de sorts préparés doivent préparer des sorts dans ces emplacements de sorts comme ils le font pour tous leurs autres emplacements de sorts.</p>
+<p>Les personnages qui lancent des sorts divins et vénèrent la divinité inscrite sur la bougie peuvent effectuer leurs préparations quotidiennes à moins de 3 mètres de la bougie allumée pour gagner deux emplacements de sorts supplémentaires pour la journée, chacun à la moitié du niveau de sort le plus élevé que le personnage peut lancer (par exemple, des emplacements de 4ème niveau si le lanceur peut lancer des sorts de niveau 8). Les lanceurs de sorts préparés doivent préparer des sorts dans ces emplacements de sorts comme ils le font pour tous leurs autres emplacements de sorts.</p>
 <p>Les emplacements de sorts supplémentaires d'un lanceur de sorts provenant de la bougie sont perdus la prochaine fois que ce lanceur de sorts effectue ses préparations quotidiennes. Personne ne peut bénéficier de plus d'une bougie d'invocation par jour, mais plusieurs personnages peuvent bénéficier des effets d'une seule bougie.</p>
