--- a/data/equipment/consumable-11-IZRfgOYlZ3HRBkYX.htm
+++ b/data/equipment/consumable-11-IZRfgOYlZ3HRBkYX.htm
@@ -1,14 +1,13 @@
 Name: Oil of Repulsion
 Nom: Huile de répulsion
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>This oil contains magnetically charged iron filings repelled into opposite ends of the vial. For 1 minute after you apply this oil to armor, any creature that hits you with a melee Strike must attempt a DC 28 Fortitude save with the following effects.</p>
 <p><strong>Success</strong> The creature is unaffected.<br /><strong>Failure</strong> The creature is pushed up to 10 feet away from you (the GM determines the direction).<br /><strong>Critical Failure</strong> As failure, and the creature is also knocked prone.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p><span>Cette huile contient de la limaille de fer aimantée, repoussée de part et d’autre de la fiole. Pendant 1 minute après application de cette huile sur une armure, toute créature qui vous touche avec une Frappe au corps à corps doit faire un jet de Vigueur DD 28 avec l’effet suivant.</p>
 <p><strong>Succès</strong> La créature n’est pas affectée.</p>
 <p><strong>Echec</strong> La créature est repoussée de 3 mètres loin de vous (le MJ détermine au hasard dans quelle direction).</p>
