--- a/data/equipment/consumable-16-ws3OXRgAawwYIKK6.htm
+++ b/data/equipment/consumable-16-ws3OXRgAawwYIKK6.htm
@@ -18,7 +18,7 @@ Nom: Résine répulsive
 <p><strong>Activate</strong> <span class="pf2-icon">1</span>1</span> Interagir ;</p>
 <p>Ce goudron clair et insipide amène la victime à émettre des ondes d'énergie mentale nocive qui repoussent les autres créatures. Les utilisateurs désespérés peuvent consommer ce poison pour garder leurs ennemis à distance malgré ses effets débilitants. Tant que vous êtes @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} par ce poison, une créature qui commence son tour à moins de 3 mètres de vous ou qui s'approche à moins de 3 mètres de vous doit tenter un jet de sauvegarde de Volonté DD 35. En cas d'échec, la créature ne peut pas se rapprocher volontairement de vous ; il s'agit d'un effet mental. Une fois que la créature qui s'approche a tenté un jet de sauvegarde, elle utilise le même résultat pour tous ses jets de sauvegarde contre cette dose de résine de répulsion.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DD 38 Vigueur;</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 38;</p>
 <p><strong>Début</strong> 10 minutes;</p>
 <p><strong>Durée maximale</strong> 6 minutes;</p>
 <p><strong>Stade 1</strong> [[/r 12d6 #mental]] dégâts mentaux et Stupéfié 1 (1 minute);</p>
