--- a/data/equipment/consumable-17-KsoofB7FCppaBTdK.htm
+++ b/data/equipment/consumable-17-KsoofB7FCppaBTdK.htm
@@ -1,13 +1,12 @@
 Name: Celestial Peach (Rejuvination)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Pêche céleste (Rajeunissement)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <p>Among Hao Jin's most precious treasures are three living plants, the last surviving celestial peach trees taken from the mountains of Chu Ye. One of the trees grows pearls in place of flowers, but the other two bear fruit that is far more valuable. Eating one of these small red peaches can heal even the most grievous of injuries.</p>
 <p>You gain the effects of 7th-level @Compendium[pf2e.spells-srd.SUKaxVZW2TlM8lu0]{Neutralize Poison}, @Compendium[pf2e.spells-srd.2Vkd1IxylPceUAAF]{Regenerate}, @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{Remove Curse}, and @Compendium[pf2e.spells-srd.RneiyehRO6f7LP44]{Remove Disease} spells. The peach has a counteract modifier of [[/r 1d20+27]].</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Parmi les trésors les plus précieux de Hao Jin'se trouvent trois plantes vivantes, les derniers pêchers célestes survivants prélevés dans les montagnes de Chu Ye. L'un de ces arbres fait pousser des perles à la place des fleurs, mais les deux autres portent des fruits bien plus précieux. Manger l'une de ces petites pêches rouges peut guérir même la plus grave des blessures.</p>
-<p>Vous gagnez les effets de @Compendium[pf2e.spells-srd.SUKaxVZW2TlM8lu0]{Neutraliser le poison} de 7e niveau, @Compendium[pf2e.spells-srd.2 Vkd1IxylPceUAAF]{Regénérer}, @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{Mettre fin à la malédiction}, et @Compendium[pf2e.spells-srd.RneiyehRO6f7LP44]{Mettre fin à la maladie}. La pêche a un modificateur de contre-attaque de [[/r 1d20+27]].</p>
+<p>Vous gagnez les effets de @Compendium[pf2e.spells-srd.SUKaxVZW2TlM8lu0]{Neutraliser le poison} de niveau 7, @Compendium[pf2e.spells-srd.2 Vkd1IxylPceUAAF]{Regénération}, @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{Délivrance des malédictions}, et @Compendium[pf2e.spells-srd.RneiyehRO6f7LP44]{Délivrance des maladies}. La pêche a un modificateur de contre-attaque de [[/r 1d20+27]].</p>
