--- a/data/equipment/consumable-20-ktAjhlI9NxpFJMdp.htm
+++ b/data/equipment/consumable-20-ktAjhlI9NxpFJMdp.htm
@@ -1,13 +1,12 @@
 Name: Celestial Peach (Life)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Pêche céleste (Vie)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <p>Among Hao Jin's most precious treasures are three living plants, the last surviving celestial peach trees taken from the mountains of Chu Ye. One of the trees grows pearls in place of flowers, but the other two bear fruit that is far more valuable. Eating one of these small red peaches can heal even the most grievous of injuries.</p>
 <p>When you place the peach into the mouth of an intact corpse that died within the last year, it casts a 10th-level @Compendium[pf2e.spells-srd.IkGYwHRLhkuoGReG]{Raise Dead} on the corpse.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
+<p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <p>Parmi les trésors les plus précieux de Hao Jin'se trouvent trois plantes vivantes, les derniers pêchers célestes survivants prélevés dans les montagnes de Chu Ye. L'un de ces arbres fait pousser des perles à la place des fleurs, mais les deux autres portent des fruits bien plus précieux. Manger l'une de ces petites pêches rouges peut guérir même la plus grave des blessures.</p>
-<p>Lorsque vous placez la pêche dans la bouche d'un cadavre intact mort au cours de la dernière année, elle lance un @Compendium[pf2e.spells-srd.IkGYwHRLhkuoGReG]{Raisonnement des morts} de 10e niveau sur le cadavre.</p>
+<p>Lorsque vous placez la pêche dans la bouche d'un cadavre intact mort au cours de la dernière année, elle lance un @Compendium[pf2e.spells-srd.IkGYwHRLhkuoGReG]{Rappel à la vie} de niveau 10 sur le cadavre.</p>
