--- a/data/equipment/consumable-11-uggpIk6vguWFXVli.htm
+++ b/data/equipment/consumable-11-uggpIk6vguWFXVli.htm
@@ -1,7 +1,6 @@
 Name: Silvertongue Mutagen (Greater)
 Nom: Mutagène de langue dorée (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,10 @@ Nom: Mutagène de langue dorée (supérieur)
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.oAewXfq9c0ecaSfw]{Effect: Silvertongue Mutagen (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
-Vos traits deviennent séduisants et votre voix musicale et autoritaire, en revanche, les faits et les chiffres deviennent flous et l’émotion obs‑ curcit votre raisonnement.
+Vos traits deviennent séduisants et votre voix musicale et autoritaire, en revanche, les faits et les chiffres deviennent flous et l’émotion obscurcit votre raisonnement.
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +3 aux tests de Duperie, Diplomatie, Intimidation et Représentation. Vos échecs critiques dans ces compétences deviennent de simples échecs.</p>
 <p><strong>Inconvénients</strong> Vous subissez un malus de −2 aux tests d’Arcanes, Artisanat, Connaissances, Occultisme et Société. Choisissez une compétence dans laquelle vous êtes qualifié : pendant toute la durée, vous devenez inexpérimenté. Tous vos échecs aux tests de @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Se souvenir} deviennent des échecs critiques.</p>
 <p><strong>Durée</strong> 1 heure.</p>
-<p><p>@Compendium[pf2e.consumable-effects.v5Ht1V4MZvRKRBjL]{Effet: Mutagène de langue dorée (Supérieur)}</p>
+<p><p>@Compendium[pf2e.consumable-effects.v5Ht1V4MZvRKRBjL]{Effet: Mutagène de langue dorée (supérieur)}</p>
