--- a/data/equipment/consumable-17-uD5vRYVOXNJ53sEE.htm
+++ b/data/equipment/consumable-17-uD5vRYVOXNJ53sEE.htm
@@ -1,7 +1,6 @@
 Name: Silvertongue Mutagen (Major)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène de langue dorée (majeur)
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,10 @@ Nom:
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.9FfFhu2kl2wMTsiI]{Effect: Silvertongue Mutagen (Major)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
-Vos traits deviennent frappants et votre voix devient musicale et autoritaire, bien que les faits et les chiffres deviennent flous pour vous et que l'émotion obscurcisse votre capacité à raisonner.</p>
-<p><strong>Avantage</strong> Vous gagnez un bonus de +4 aux tests de Déception, Diplomatie, Intimidation et Performance. Vos échecs critiques avec l'une de ces compétences deviennent des échecs à la place.</p>
-<p><strong>Drawback</strong> Vous subissez un malus de -2 aux contrôles d'Arcane, d'Artisanat, de Lore, d'Occultisme et de Société. Choisissez une compétence dans laquelle vous êtes entraîné ; pour la durée, vous devenez non entraîné dans cette compétence. Tous vos échecs au @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Rappel de connaissances} deviennent des échecs critiques.</p>
+Vos traits deviennent séduisants et votre voix musicale et autoritaire, en revanche, les faits et les chiffres deviennent flous et l’émotion obscurcit votre raisonnement.
+<p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +4 aux tests de Duperie, Diplomatie, Intimidation et Représentation. Vos échecs critiques dans ces compétences deviennent de simples échecs.</p>
+<p><strong>Inconvénients</strong> Vous subissez un malus de −2 aux tests d’Arcanes, Artisanat, Connaissances, Occultisme et Société. Choisissez une compétence dans laquelle vous êtes qualifié : pendant toute la durée, vous devenez inexpérimenté. Tous vos échecs aux tests de @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Se souvenir} deviennent des échecs critiques.</p>
 <p><strong>Durée</strong> 1 heure.</p>
-<p>@Compendium[pf2e.consumable-effects.9FfFhu2kl2wMTsiI]{Effet : Mutagène Langue d'Argent (Majeur)}</p>
+<p><p>@Compendium[pf2e.consumable-effects.v5Ht1V4MZvRKRBjL]{Effet: Mutagène de langue dorée (majeur)}</p>
