--- a/data/equipment/consumable-11-ZGojRKG1yYiVWemR.htm
+++ b/data/equipment/consumable-11-ZGojRKG1yYiVWemR.htm
@@ -1,7 +1,6 @@
 Name: Cognitive Mutagen (Greater)
 Nom: Mutagène cognitif (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,10 @@ Nom: Mutagène cognitif (supérieur)
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.qit1mLbJUyRTYcPU]{Effect: Cognitive Mutagen (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 <p>Votre esprit devient limpide et rien n’entrave vos facultés intellectuelles, mais la matière physique vous semble éphémère.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +3 aux tests d’Arcanes, d’Artisanat, de Connaissances, d’Occultisme et de Société ainsi qu’à tous les tests pour @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Se souvenir}. Vos échecs critiques aux tests de Se souvenir deviennent de simples échecs.</p>
 <p><strong>Inconvénient</strong> Vous subissez un malus de −2 aux jets d’attaque avec une arme ou à mains nues, ainsi qu’aux tests d’Athlétisme et d’Acrobaties. Vous êtes surchargé à partir de 2 Encombrements de moins que d’ordinaire et le maximum d’Encombrements que vous pouvez porter est réduit de 4.</p>
 <p><strong>Durée</strong> 1 heure.</p>
-<p>@Compendium[pf2e.consumable-effects.qit1mLbJUyRTYcPU]{Effet: Mutagène cognitif (Supérieur)}</p>
+<p>@Compendium[pf2e.consumable-effects.qit1mLbJUyRTYcPU]{Effet: Mutagène cognitif (supérieur)}</p>
