--- a/data/equipment/consumable-19-5hGJ6CZi0A9OjMd4.htm
+++ b/data/equipment/consumable-19-5hGJ6CZi0A9OjMd4.htm
@@ -1,7 +1,6 @@
 Name: Oblivion Essence
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Essence de l'oubli
+État: libre
 
 ------ Description (en) ------
 <p>Created from a daemon's powdered soul gems or refined from the waters of Abaddon's rivers, oblivion essence causes victims to rapidly age and decay.</p>
@@ -13,11 +12,11 @@ Nom:
 <p><strong>Stage 2</strong> [[/r 10d6#poison]] poison damage, @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} 2, and slowed 1 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 12d6#poison]] poison damage, enfeebled 3, slowed 1 (1 round)</p>
 ------ Description (fr) ------
-Créée à partir des gemmes d'âme en poudre d'un démon ou raffinée à partir des eaux des rivières d'Abaddon, l'essence de l'oubli fait vieillir et se décomposer rapidement les victimes ;
+Créée à partir des gemmes d'âme en poudre d'un démon ou raffinée à partir des eaux des rivières d'Abaddon, l'essence de l'oubli fait vieillir et décompose rapidement les victimes.
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact (Injury)</p>
-<p><strong>Jet de sauvegarde</strong> DC 42 Force</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Phase 1</strong> [[/r 8d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Soufflé} 1 (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 10d6#poison]] dégâts de poison, @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} 2, et ralenti 1 (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 12d6#poison]] dégâts de poison, affaibli 3, ralenti 1 (1 round)</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 42;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 8d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 (1 round)</p>
+<p><strong>Stade 2</strong> [[/r 10d6#poison]] dégâts de poison, @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 2, et Ralenti 1 (1 round)</p>
+<p><strong>Stade 3</strong> [[/r 12d6#poison]] dégâts de poison, Affaibli 3, Ralenti 1 (1 round)</p>
