--- a/data/equipment/consumable-20-FB7qAHjiiHTGhRnn.htm
+++ b/data/equipment/consumable-20-FB7qAHjiiHTGhRnn.htm
@@ -1,7 +1,6 @@
 Name: Celestial Hair
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Chevelure céleste
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Interact</p>
@@ -9,7 +8,7 @@ Nom:
 <p>This strand of hair shimmers like the strands of fate. When you activate the string, it resonates with a single, perfect note.</p>
 <p>The triggering saving throw becomes a failure or the triggering attack roll becomes a regular hit, not critical one. If the source of the attack or effect is an evil creature, that creature must succeed at a DC 41 Will saving throw or be enfeebled 2 and stupefied 2 until the end of its next turn.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">F</span> Interact</p>
-<p><strong>Déclencheur</strong> Vous échouez de manière critique à un jet de sauvegarde ou êtes touché de manière critique par une attaque</p>
-<p>Cette mèche de cheveux scintille comme les fils du destin. Lorsque vous activez la corde, elle résonne d'une note unique et parfaite</p>
-<p>Le jet de sauvegarde qui déclenche l'effet devient un échec ou le jet d'attaque qui déclenche l'effet devient un coup régulier, et non un coup critique. Si la source de l'attaque ou de l'effet est une créature maléfique, cette dernière doit réussir un jet de sauvegarde de Volonté DC 41 ou être affaiblie 2 et stupéfiée 2 jusqu'à la fin de son prochain tour.</p>
+<p><strong>Activate</strong> <span class="pf2-icon">F</span> Interact</p>
+<p><strong>Déclencheur</strong> Vous échouez de manière critique à un jet de sauvegarde ou vous êtes touché de manière critique par une attaque</p>
+<p>Cette mèche de cheveux scintille comme les fils du destin. Lorsque vous l'activez, elle résonne d'une note unique et parfaite</p>
+<p>Le jet de sauvegarde qui déclenche l'effet devient un échec ou le jet d'attaque qui déclenche l'effet devient un coup régulier, et non un coup critique. Si la source de l'attaque ou de l'effet est une créature maléfique, cette dernière doit réussir un jet de sauvegarde de Volonté DD 41 ou être @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaiblie} 2 et @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfiée} 2 jusqu'à la fin de son prochain tour.</p>
