--- a/data/equipment/consumable-20-dRi775Uhzqgn7aBs.htm
+++ b/data/equipment/consumable-20-dRi775Uhzqgn7aBs.htm
@@ -1,7 +1,6 @@
 Name: Nightmare Salt
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Sels de cauchemards
+État: libre
 
 ------ Description (en) ------
 <p>This potent poison consists of crystals whose flavor and appearance mimics edible salt but whose effects are deadly: victims experience periods of waking nightmares that overload the senses and eventually result in death through a combination of shock and exhaustion.</p>
@@ -15,13 +14,13 @@ Nom:
 <p><strong>Stage 3</strong> frightened 3, plus confused for [[/r 1d4]] minutes, once every hour, plus fatigued (1 day)</p>
 <p><strong>Stage 4</strong> death</p>
 ------ Description (fr) ------
-Ce poison puissant est constitué de cristaux dont la saveur et l'apparence ressemblent à du sel comestible, mais dont les effets sont mortels : les victimes font des cauchemars éveillés qui surchargent leurs sens et finissent par mourir sous l'effet combiné du choc et de l'épuisement ;
+Ce poison puissant est constitué de cristaux dont la saveur et l'apparence ressemblent à du sel comestible, mais dont les effets sont mortels : les victimes font des cauchemars éveillés qui surchargent leurs sens et finissent par mourir sous l'effet combiné du choc et de l'épuisement.
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">T</span> Interact (Ingested)</p>
-<p><strong>Jet de sauvegarde</strong> DC 43 Force</p>
-<p><strong>Début</strong> 1 heure</p>
-<p><strong>Durée maximale</strong> 5 jours</p>
-<p><strong>Phase 1</strong> @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Augmentation} 2 une fois toutes les [[/r 1d4]] heures, plus @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigue}. (1 jour)</p>
-<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confusion} pendant 1 minute toutes les [[/r 1d4]] heures, plus effrayé 3 et fatigué (1 jour)</p>
-<p><strong>Stade 3</strong> effrayé 3, plus confus pendant [[/r 1d4]] minutes, une fois par heure, plus fatigué (1 jour)</p>
-<p><strong>Stade 4</strong> mort</p>
+<p><strong>Activate</strong> <span class="pf2-icon">T</span> Interagir (Ingéré)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 43;</p>
+<p><strong>Début</strong> 1 heure;</p>
+<p><strong>Durée maximale</strong> 5 jours;</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Éffrayé} 2 une fois toutes les [[/r 1d4]] heures, plus @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}. (1 jour)</p>
+<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus} pendant 1 minute toutes les [[/r 1d4]] heures, plus Éffrayé 3 et Fatigué (1 jour)</p>
+<p><strong>Stade 3</strong> Éffrayé 3, plus Confus pendant [[/r 1d4]] minutes, une fois par heure, plus Fatigué (1 jour)</p>
+<p><strong>Stade 4</strong> Mort</p>
