--- a/data/equipment/consumable-19-9WenEIQrBV8POQU1.htm
+++ b/data/equipment/consumable-19-9WenEIQrBV8POQU1.htm
@@ -1,6 +1,6 @@
 Name: Panacea Fruit
-Nom: 
-État: auto-trad
+Nom: Fruit panacée
+État: libre
 
 ------ Description (en) ------
 <p>This fruit is slowly, constantly changing shape, transforming from one fruit into another, but always appearing at the peak of ripeness.</p>
@@ -8,5 +8,5 @@ Nom:
 <p>The fruit's seed remains after consumption and can be planted later, becoming a seed-shaped @Compendium[pf2e.equipment-srd.4owFeOy4zxy8rv7W]{Feather Token (Tree)} that sprouts a tree bearing many kinds of mundane fruit.</p>
 ------ Description (fr) ------
 <p>Ce fruit change lentement et constamment de forme, se transformant d'un fruit à un autre, mais apparaissant toujours à l'apogée de sa maturité.</p>
-<p>Lorsque vous consommez ce fruit, il tente de contrer toutes les malédictions, maladies et poisons qui vous affectent, et vous regagnez immédiatement [[/r 8d8+30]] Points de vie. Le fruit a un niveau de neutralisation de 9 et un modificateur [[/r 1d20+30]] pour les jets contre chaque condition.</p>
-<p>La graine du fruit reste après consommation et peut être plantée plus tard, devenant un @Compendium[pf2e.equipment-srd.4owFeOy4zxy8rv7W]{jeton Plume (Arbre)} en forme de graine qui fait pousser un arbre portant de nombreuses sortes de fruits ordinaires.</p>
+<p>Lorsque vous consommez ce fruit, il tente de contrer toutes les malédictions, maladies et poisons qui vous affectent, et vous regagnez immédiatement [[/r 8d8+30]] Points de vie. Le fruit a un niveau de neutralisation de 9 et un modificateur [[/r 1d20+30]] pour contrer chaque condition.</p>
+<p>La graine du fruit reste après consommation et peut être plantée plus tard, devenant un @Compendium[pf2e.equipment-srd.4owFeOy4zxy8rv7W]{Plume magique (Arbre)} un arbre portant de nombreuses sortes de fruits ordinaires.</p>
