--- a/data/equipment/consumable-19-gn5ITN5GILHKxGA4.htm
+++ b/data/equipment/consumable-19-gn5ITN5GILHKxGA4.htm
@@ -1,6 +1,6 @@
 Name: Ambrosia of Undying Hope
-Nom: 
-État: auto-trad
+Nom: Ambroisie d'Éternel espoir
+État: libre
 
 ------ Description (en) ------
 <p>This elixir is usually stored in a small metal flask or miniature stein. The dark liquid sparkles as if it were full of stars and is considered sacred to @Compendium[pf2e.deities.v67fHklTZ6LoU54q]{Cayden Cailean} and to the cults of the Failed in Absalom.</p>
@@ -8,5 +8,5 @@ Nom:
 <p>The ambrosia can't protect you from death effects or disintegration, but it can protect against almost any other form of death via damage. You can only be under the effect of a single ambrosia of undying hope at a time.</p>
 ------ Description (fr) ------
 <p>Cet élixir est généralement conservé dans une petite fiole en métal ou une stèle miniature. Le liquide sombre scintille comme s'il était rempli d'étoiles et est considéré comme sacré pour @Compendium[pf2e.deities.v67fHklTZ6LoU54q]{Cayden Cailean} et pour les cultes des Échoués d'Absalom.</p>
-<p>La prochaine fois que vous mourrez de dommages dans les 8 heures après avoir bu l'ambroisie, celle-ci vous empêche de mourir, vous regagnez [[/r 20]] Points de vie, les bénéfices de l’élixir prennent fin et vous êtes temporairement immunisé contre l’ambroisie de l’espoir éternel pendant 24 heures.</p>
-<p>L'ambroisie ne peut'pas vous protéger des effets de mort ou de désintégration, mais elle peut vous protéger contre presque toutes les autres formes de mort par dommages. Vous ne pouvez être sous l'effet que d'une seule ambroisie d'espoir éternel à la fois.</p>
+<p> Cette ambroisie vous empêche de mourir suite à des dégâts importants durant les 8 heures après avoir bu, et vous regagnez [[/r 20]] Points de vie. Dès que les bénéfices de l’élixir prennent fin et vous êtes temporairement immunisé contre Ambroisie d'Éternel espoir pendant 24 heures.</p>
+<p>L'ambroisie ne peut'pas vous protéger des effets de mort ou de désintégration, mais elle peut vous protéger contre presque toutes les autres formes de mort. Vous ne pouvez être sous l'effet que d'une seule Ambroisie d'Éternel espoir à la fois.</p>
