--- a/data/classfeatures/oracle-01-GTSvbFb36InvuH0w.htm
+++ b/data/classfeatures/oracle-01-GTSvbFb36InvuH0w.htm
@@ -1,7 +1,6 @@
 Name: Flames Mystery
 Nom: Mystère des flammes
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Fire lives at the center of the world, the center of the sun, and the center of civilization. You might revere this elemental force, siphon power from the Elemental Plane of Fire, or venerate a collection of deities such as Asmodeus, Sarenrae, the Tian goddess of disasters and volcanoes Lady Nanbyo, or the elemental lord of fire Ymeri.</p>
