--- a/data/classfeatures/witch-09-tfugXJHITCnArN1b.htm
+++ b/data/classfeatures/witch-09-tfugXJHITCnArN1b.htm
@@ -5,5 +5,4 @@ Nom: Réflexes fulgurants (Niveau 9)
 ------ Description (en) ------
 <p>Your reflexes are lightning fast. Your proficiency rank for Reflex saves increases to expert.</p>
 ------ Description (fr) ------
-<p>Vos réflexes sont fulgurants.</p>
-<p>Votre rang de maîtrise pour les jets de Réflexes passe à expert.</p>
+<p>Vos réflexes sont fulgurants. Votre rang de maîtrise pour les jets de Réflexes passe à expert.</p>
