--- a/data/classfeatures/witch-11-O99eXctsEjEpuBwe.htm
+++ b/data/classfeatures/witch-11-O99eXctsEjEpuBwe.htm
@@ -1,7 +1,6 @@
 Name: Weapon Expertise (Level 11)
 Nom: Expertise avec les armes (Niveau 11)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Sorcerer:</strong> Training and magic improved your weapon technique. Your proficiency rank for simple weapons and unarmed attacks increases to expert.</p>
@@ -10,6 +9,8 @@ Nom: Expertise avec les armes (Niveau 11)
 <hr />
 <p><strong>Witch</strong>: Through sheer experience, you've improved your technique with your weapons. Your proficiency ranks for simple weapons and unarmed attacks increase to expert.</p>
 ------ Description (fr) ------
+<p><strong>Ensorceleur</strong> L’entraînement et la magie améliorent votre technique de maniement des armes. Votre rang de maîtrise avec les armes simples passe à expert.</p>
+<hr />
 <p><strong>Oracle</strong> Vous vous êtes consacré à l'apprentissage des subtilités de vos armes. Vos rangs de maîtrise avec les armes simples, les armes de guerre et les attaques à mains nues passent à expert.</p>
 <hr />
 <p><strong>Sorcière</strong> Grâce à la simple expérience, vous avez amélioré voter technique avec vos armes. Vos rangs de maîtrise avec les armes simples, les armes de guerre et les attaques à mains nues passent à expert.</p>
