--- a/data/equipment/consumable-07-4tnPWyApPZP1P1yO.htm
+++ b/data/equipment/consumable-07-4tnPWyApPZP1P1yO.htm
@@ -1,6 +1,6 @@
 Name: Swift Block Cabochon
 Nom: Cabochon de Blocage rapide
-État: officiel
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
