--- a/data/classfeatures/wizard-09-MzyPNlxrNA5OKVd7.htm
+++ b/data/classfeatures/wizard-09-MzyPNlxrNA5OKVd7.htm
@@ -5,5 +5,4 @@ Nom: Vigueur magique (Niveau 9)
 ------ Description (en) ------
 <p>Magical power has improved your body's resiliency. Your proficiency rank for Fortitude saves increases to expert.</p>
 ------ Description (fr) ------
-<p>La puissance magique a amélioré la résilience de votre corps.</p>
-<p>Votre rang de maîtrise pour les jets de Vigueur passe à expert.</p>
+<p>La puissance magique a amélioré la résilience de votre corps. Votre rang de maîtrise pour les jets de Vigueur passe à expert.</p>
