--- a/data/classfeatures/wizard-19-Hfaa7TuLn3nE8lr3.htm
+++ b/data/classfeatures/wizard-19-Hfaa7TuLn3nE8lr3.htm
@@ -1,7 +1,6 @@
 Name: Legendary Spellcaster (Level 19)
 Nom: Incantateur légendaire (Niveau 19)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Bard</strong>: Your command of occult magic is the stuff of legends. Your proficiency ranks for occult spell attack rolls and spell DCs increase to legendary.</p>
