--- a/data/conditionitems/9evPzg9E6muFcoSk.htm
+++ b/data/conditionitems/9evPzg9E6muFcoSk.htm
@@ -1,7 +1,6 @@
 Name: Unnoticed
 Nom: Inaperçu
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>If you are unnoticed by a creature, that creature has no idea you are present at all. When you're unnoticed, you're also @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Undetected} by the creature. This condition matters for abilities that can be used only against targets totally unaware of your presence.</p>
