--- a/data/conditionitems/fesd1n5eVhpCSS18.htm
+++ b/data/conditionitems/fesd1n5eVhpCSS18.htm
@@ -1,7 +1,6 @@
 Name: Sickened
 Nom: Malade
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You feel ill. Sickened always includes a value. You take a status penalty equal to this value on all your checks and DCs. You can't willingly ingest anything-including elixirs and potions-while sickened.<br /><br />You can spend a single action retching in an attempt to recover, which lets you immediately attempt a Fortitude save against the DC of the effect that made you sickened. On a success, you reduce your sickened value by 1 (or by 2 on a critical success).</p>
