--- a/data/conditionitems/i3OJZU2nk64Df3xm.htm
+++ b/data/conditionitems/i3OJZU2nk64Df3xm.htm
@@ -5,4 +5,4 @@ Nom: Maladroit
 ------ Description (en) ------
 <p>Your movements become clumsy and inexact. Clumsy always includes a value. You take a status penalty equal to the condition value to Dexterity-based checks and DCs, including AC, Reflex saves, ranged attack rolls, and skill checks using Acrobatics, Stealth, and Thievery.</p>
 ------ Description (fr) ------
-<p>Vos mouvements deviennent maladroits et incertains. L’état maladroit est toujours accompagné d’une intensité. Vous subissez un malus de statut égal à l’intensité de l’état et qui s’applique à vos tests et vos DD basés sur la Dextérité, comme votre CA, vos jets de Réflexes, vos jets d’attaque à distance et vos tests de compétences basés sur Acrobaties, Discrétion et Vol.</p>
+<p>Vos mouvements deviennent maladroits et incertains. L’état Maladroit est toujours accompagné d’une intensité. Vous subissez un malus de statut égal à l’intensité de l’état et qui s’applique à vos tests et vos DD basés sur la Dextérité, comme votre CA, vos jets de Réflexes, vos jets d’attaque à distance et vos tests de compétences basés sur Acrobaties, Discrétion et Vol.</p>
