révision des ascendances

--- a/data/ancestries/18xDKYPDBLEv2myX.htm
+++ b/data/ancestries/18xDKYPDBLEv2myX.htm
@@ -72,5 +72,5 @@ p><em>Les tengus sont un peuple d'experts de la survie plein de ressources qui s
 <p>Les tengus deviennent souvent des roublards, des bardes, des oracles des rôdeurs ou des bretteurs.</p>
 <h2>Noms</h2>
 <p>Bien que les tengus sur le perchoir tendent à garder des noms plus traditionnels avec des consonnances difficiles souvent entendues dans le langage tengu, la tendance des tengus migrateurs à absorber et à intégrer la culture de ceux qui les entourent les a conduit à adopter des noms qui combinent des éléments de toutes les langues adaptées à la fantaisie de celui qui les a nommés.</p>
-<h3><span style="text-decoration: underline;">Exemples de noms</span></h3>
+<h3>Exemples de noms</h3>
 <p>Arkkak, Chuko, Dolgra, Dorodara, Kakkariel, Kora, Marrak, Mossarah, Pularrka, Rarorel, Ruk, Tak-Tak, Tsukotarra</p>
