--- a/data/ancestries/BYj5ZvlXZdpaEgA6.htm
+++ b/data/ancestries/BYj5ZvlXZdpaEgA6.htm
@@ -1,7 +1,6 @@
 Name: Dwarf
 Nom: Nain
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><em>Dwarves have a well-earned reputation as a stoic and stern people, ensconced within citadels and cities carved from solid rock. While some see them as dour and humorless crafters of stone and metal, dwarves and those who have spent time among them understand their unbridled zeal for their work, caring far more about quality than quantity. To a stranger, they can seem untrusting and clannish, but to their friends and family, they are warm and caring, their halls filled with the sounds of laughter and hammers hitting anvils.</em></p>
@@ -68,5 +67,5 @@ Nom: Nain
 <p>Les nains ont généralement un historique d’acolyte, d’artisan, de marchand, de mineur ou de guerrier. Les nains excellent dans de nombreuses classes martiales, comme celles de barbare, de guerrier, de moine et de rôdeur, mais ils font aussi d’excellents prêtres et druides.</p>
 <h2>Noms</h2>
 <p>Les nains honorent leurs enfants en leur donnant les noms d’ancêtres ou de héros nains. Il est rare qu’ils inventent un nouveau nom ou en empruntent un à une autre culture. Quand ils se présentent, les nains indiquent généralement leur famille et leur clan d’origine, ainsi que tous les autres liens familiaux et titres honorifiques associés. Les noms des nains font rarement plus ou moins de deux syllabes et contiennent souvent des consonnes dures.</p>
-<h3><span style="text-decoration: underline;">Exemple de noms</span></h3>
+<h3>Exemples de noms</h3>
 <p>Agna, Bodill, Dolgrin, Edrukk, Grunyar, Ingra, Kazmuk, Kotri, Lupp, Morgrym, Rogar, Rusilka, Torra, Yangrit</p>
