--- a/data/ancestries/CYlfsYLJcBOgqKtD.htm
+++ b/data/ancestries/CYlfsYLJcBOgqKtD.htm
@@ -64,5 +64,5 @@ Nom: Gnome
 <p>La connexion qui existe entre les gnomes et la magie les prédispose aux classes incantatrices, notamment les classes qui correspondent à la tradition de leurs sorts innés primordiaux, comme druide ou ensorceleur primordial. Cela dit, les gnomes des sources peuvent se tourner vers d’autres classes maniant la magie.</p>
 <h2>Noms</h2>
 <p>Les gnomes ont des noms généralement polysyllabiques qui peuvent être assez complexes. Ils n’attachent pas beaucoup d’importance à la tradition, et les parents nomment ainsi souvent leurs enfants en fonction de leur envie du moment. Peu leur importe la complexité de la prononciation de leur nom, car ils s’attribuent généralement un surnom d’usage. Certains collectionnent même des surnoms dont ils font un inventaire. Parmi les gnomes, on considère que plus un nom est court, plus il est féminin.</p>
-<h3><span style="text-decoration: underline;">Exemple de noms</span></h3>
+<h3>Exemples de noms</h3>
 <p>Abroshtor, Bastargre, Besh, Fijit, Halungalom, Krolmnite, Neji, Majet, Paï, Poshment, Queck, Trig, Zarzuket, Zatqualmie</p>
