--- a/data/ancestries/FXlXmNBFiiz9oasi.htm
+++ b/data/ancestries/FXlXmNBFiiz9oasi.htm
@@ -62,5 +62,5 @@ Nom: Distordu
 <h2>Noms</h2>
 <p>Les distordus peuvent venir de — et ainsi avoir des noms de — toute culture ou ascendance, mais certains se donnent à eux-mêmes de nouveaux noms après avoir été transformés, que ce soit pour célébrer le changement, pour reconnaître une nouvelle phase de leurs vies ou pour cacher leur ancienne identité. De nombreux distordus portent aussi un surnom descriptif qui leur est donné par d'autres, comme “Triple main,” “Pied d'écorce” ou “Bouches nombreuses.”</p>
 <p>Les distordus ne conservent pas les surnoms qu'ils trouvent personnellement offensants mais tendent à conserver ceux qui décrivent leur apparence distinctive ou celles qui leur est donnée par des personnes dont ils se soucient.</p>
-<h3><span style="text-decoration: underline;">Exemple de Noms</span></h3>
+<h3>Exemples de Noms</h3>
 <p>Borble, Dag, Feff, Hurn, Kemp, Omber, Ostro, Shurni, Surm, Wumpin</p>
