--- a/data/ancestries/7oQxL6wgsokD3QXG.htm
+++ b/data/ancestries/7oQxL6wgsokD3QXG.htm
@@ -66,7 +66,7 @@ Nom: Kobold
 <p>Les kobolds partent souvent à l'aventure à la poursuite de pouvoir, de connaissance et de trésors qui leur paraissent correspondre à leurs égos largement disproportionnés. Lorsque des aventuriers, des milices ou des tyrans sans scrupules dispersent une communauté kobold, les survivants s'accrochent souvent à de nouvelles familles, recherchant une consolation émotionnelle — et quelques fois une revanche. Les historiques typiques des kobolds incluent artisan, artiste, criminel, chasseur, mineur, éclaireur, bricoleur, bandit, cultiste, récupérateur et serviteur. Les kobolds excellent en tant que bardes, rôdeurs, roublards et ensorceleurs, bien qu'ils canalisent aussi leur ingéniosité comme alchimistes ou magiciens.</p>
 <h2>Noms</h2>
 <p>Le nom donné à un jeune kobold comporte rarement plus d'une ou deux syllables. Lorsqu'ils vieillissent, qu'ils augmentent leur statut et accomplissent des faits glorieux, les kobolds ajoutent davantage de syllables à leurs noms, imitant une pratique draconique courante. Les kobolds portent rarement des patronymes sauf lorsqu'ils font un effort pour mieux se fondre dans une communauté, auquel cas, ils adoptent typiquement le patronyme d'une importante personnalité de ce groupe.</p>
-<h3><span style="text-decoration: underline;">Exemples de noms</span></h3>
+<h3>Exemples de noms</h3>
 <p>Azrnak, Draahzin, Enga, Fazgyn, Fazij, Jekkajak, Kib, Kirrok, Mirkol, Tarka, Urkak, Varshez, Vroklan, Zekstikah, Zgaz</p>
 <hr />
 <p><strong>Note pour le jeu organisé</strong> Compte tenu de nombreuses années de réussite des activités dans la Société des Éclaireurs, tous les personnages ont accès à l'ascendance kobold.</p>
