--- a/data/ancestries/GfLwE884NoRC7cRi.htm
+++ b/data/ancestries/GfLwE884NoRC7cRi.htm
@@ -60,5 +60,5 @@ Nom: Androïde
 <p>Les plupart des androïdes sont neutres. Ils prennent soin de leur propre sécurité et de celles de leurs compagnons et des leurs. Les androïdes intéressés par la religion vénèrent le plus souvent Casandalee ou Brigh, les déesses qui unissent l'inventivité et la vie. Les autres divinités populaires incluent Desna, Irori et Gozreh.</p>
 <h2>Noms</h2>
 <p>Les androïdes adoptent les conventions des sociétés environnantes pour ce qui concerne leurs noms, alors que ceux élevés parmi les leurs choisissent à la place un nom unique qui utilise la phonologie androffan. À l'occasion, de tels androïdes ajoutent une désignation numérique à leurs noms, pour compter de combien de générations leur corps a accueilli la vie en une sorte d'hommage à leur lignée.</p>
-<h3><span style="text-decoration: underline;">Exemple de noms</span></h3>
+<h3>Exemple de noms</h3>
 <p>Anati, Daniv, Ère-4, Féralia, Gélegor, Ilgos-5, Koresh, Oris, Prime, Urdun, Vérité-3, Ymry</p>
