--- a/data/ancestries/GgZAHbrjnzWOZy2v.htm
+++ b/data/ancestries/GgZAHbrjnzWOZy2v.htm
@@ -70,5 +70,5 @@ Nom: Halfelin
 <p>Les historiques typiques des halfelins sont : acrobate, criminel, émissaire, bateleur, manoeuvre et enfant des rues. Les halfelins font de très bons prêtres et roublards, mais ils peuvent également devenir des moines ou des rôdeurs.</p>
 <h2>Noms</h2>
 <p>Les noms halfelins font généralement entre deux et trois syllabes, sont harmonieux et évitent les consonnes dures. Ils favorisent les noms aux sonorités humbles et voient dans les noms trop longs ou complexes un signe d’arrogance. Cela ne vaut cependant que pour les membres de leur peuple. Les halfelins ont des noms qui leur correspondent et ils comprennent que les elfes et les humains puissent avoir des noms plus longs qui correspondent mieux à leur sens de l’esthétique. Les humains, en particulier, ont tendance à donner des surnoms aux halfelins, parmi lesquels « Chanceux » est absurdement courant.</p>
-<h3><span style="text-decoration: underline;">Exemples de noms</span></h3>
+<h3>Exemples de noms</h3>
 <p>Anafa, Antal, Bellis, Boram, Etune, Filiu, Jamir, Kaleb, Linna, Marra, Miro, Rillka, Sistra, Sumak, Yamyra</p>
