--- a/data/ancestries/P6PcVnCkh4XMdefw.htm
+++ b/data/ancestries/P6PcVnCkh4XMdefw.htm
@@ -72,5 +72,5 @@ Nom: Homme-rat
 <p>Les historiques typiques des hommes rats incluent artisan, bricoleur, bandit, barbier, dresseur, marchand, médecin, nomade, éclaireur, récupérateur et enseignant.</p>
 <h2>Noms</h2>
 <p>Chaque famille ysokie possède peut-être deux douzaines de noms qui sont transmis de génération en génération, quelques fois avec des altérations mineures ou des surnoms alternatifs. Un grand-père peut s'appeler Grivver, par exemple et sa fille appelée Griva et son propre fils simplement Griv. Les hommes-rats se voient souvent affublés de surnoms et de sobriquets par les humanoïdes avec lesquels ils interagissent, mais la plupart des ysokis trouvent ces noms détestables et les supportent uniquement à l'extérieur des communautés ysokies.</p>
-<h3><span style="text-decoration: underline;">Exemples de Noms</span></h3>
+<h3>Exemples de Noms</h3>
 <p>Barnan, Chikis, Chonan, Deto, Jass, Jix, Knagi, Kubi, Lolo, Ninnec, Nos, Rak, Renzi, Skigim, Tali, Zess</p>
