--- a/data/ancestries/TRqoeYfGAFjQbviF.htm
+++ b/data/ancestries/TRqoeYfGAFjQbviF.htm
@@ -58,5 +58,5 @@ Nom: Sprite
 <p>Les sprites couvrent toute la gamme d'alignements mais sont rarement loyaux ou mauvais. Is sont beaucoup plus enclins à suivre les Anciens — les divinités propres aux fées — que ceux du monde mortel. Ils ont une particulière affinité pour Shyka, l'Ancien aux nombreuses formes du Temps et le Roi lanterne, le Mystificateur parmi leurs rangs. Parmi les divinités mortelles, les sprites apprécient le plus Desna et à cause de son portrait iconique comme une femme aux ailes de papillon, certains sprites Desnans la considèrent comme l'une des leurs. Les sprites sont également prêts à appréhender les doctrines de Cayden Cailean et de Shélyn et la déesse de la beauté et de l'art est même particulièrement prisée parmi les grigs.</p>
 <h2>Noms</h2>
 <p>Les noms des sprites sont entièrement basés sur les caprices de leurs parents. Les sprites adoptent souvent des surnoms supplémentaires plus tard dans leur vie pour changer ceux qui leur ont été attribués à la naissance ; cela n'est ni mal vu ni considéré comme anormal.</p>
-<h3><span style="text-decoration: underline;">Exemples de Noms</span></h3>
+<h3>Exemples de Noms</h3>
 <p>Bree, Pruneherbe, Cowrie, Flit, Papillon de nuit, Zéphyr, Naatalu, Brossepin, Zandivar</p>
