--- a/data/ancestries/cdhgByGG1WtuaK73.htm
+++ b/data/ancestries/cdhgByGG1WtuaK73.htm
@@ -63,5 +63,5 @@ vénèrent les hommes verts, de puissants esprits de la nature qui veillent sur 
 <p>Certains historiques sont particulièrement adaptés aux aventuriers léchis, principalement ceux ayant un lien avec le monde de la nature, comme chasseur, nomade ou éclaireur. Les classes ayant pour thème la nature, comme druide et rôdeur, sont des choix de premier ordre pour les léchis. En tant que druides, les léchis se tournent souvent vers l’ordre de la Feuille. Les bardes sont également un bon choix pour les léchis qui aiment raconter des histoires ; ceux-ci habitent généralement des corps de léchis grimpants.</p>
 <h2>Noms</h2>
 <p>Les léchis choisissent et changent de noms de nombreuses fois au cours de leur vie. Ces noms représentent souvent une facette de leur personnalité ou une de leurs valeurs, même si une autre convention de baptême consiste à se nommer selon un détail qu’ils admirent dans la nature. Certains léchis utilisent même un cycle de noms qui va changer de façon à correspondre à un phénomène naturel, comme des noms basés sur la saison ou l’heure de la journée.</p>
-<h3><span style="text-decoration: underline;">Exemples de Noms</span></h3>
+<h3>Exemples de Noms</h3>
 <p>Vermeille en été, Tisseur de légendes verdoyant, Chasseur qui rôde, Maître buveur du soleil, Ciel de midi chanson du soir, Branche de pin enneigée, Rapides en cascade.</p>
