--- a/data/ancestries/lSGWXjcbOa6O5fTx.htm
+++ b/data/ancestries/lSGWXjcbOa6O5fTx.htm
@@ -72,5 +72,5 @@ Nom: Orc
 <p>Les historiques courants incluent gladiateur, chasseur, disciple martial, nomade, combattant, bandit, éclaireur et réfugié. Les orcs prospèrent dans les classes martiales en tant que barbare et guerrier.</p>
 <h2>Noms</h2>
 <p>Les orcs ont une langue rude et gutturale et les conventions utilisées pour donner un nom ne font pas exception. Beaucoup de noms orcs sont simplement le mot orquien pour un trait particulièrement désirable, telles qu'une force importante, une haute taille ou la férocité. Les orcs utilisent couramment comme surnom soit le nom de leur forteresse, soit un nom faisant référence à un accomplissement particulièrement mémorable.</p>
-<h3><span style="text-decoration: underline;">Exemples de Noms</span></h3>
+<h3>Exemples de Noms</h3>
 <p>Arkus, Ausk, Durra, Grask, Grillgiss, Krugga, Mahja, Murdut, Ollak, Onyat, Thurk, Uirch, Unach</p>
