--- a/data/ancestries/q6rsqYARyOGXZA8F.htm
+++ b/data/ancestries/q6rsqYARyOGXZA8F.htm
@@ -64,5 +64,5 @@ Nom: Shoony
 <p>Les shoonys typiques ont les historiques acolyte, fermier, chasseur, maœuvre, combattant, dresseur ou gréeur. Beaucoup de shoonys aventuriers sont des guerriers qui perfectionnent leurs talents pour devenir les vaillants défenseurs de leurs amis. Certains shoonys poursuivent l'étude religieuse et deviennent des prêtres ou des champions, alors que d'autres développent leurs compétences pour chercher de la nourriture et chasser comme druides et rôdeurs tanlentueux.</p>
 <h2>Noms</h2>
 <p>Avec leurs fortes valeurs familiales et l'emphase envers les amis trouvés, ce n'est pas une surprise que les shoonys tirent grande fierté en nommant leurs enfants d'après d'autres personnes qu'ils chérissent. Les noms shoonys sont courts, gutturaux et sonnent souvent comme des cordes lâches de voyelles non associées et de douces consonnes pour les gens d'autres ascendances. Les shoonys accordent de la valeur aux noms et prennent grand soin de les apprendre et de prononcer correctement les noms de leurs amis.</p>
-<h3><span style="text-decoration: underline;">Exemples de Noms</span></h3>
+<h3>Exemples de Noms</h3>
 <p>Ahogo, Arnbin, Bighmor, Bondin, Domwurd, Ebmeur, Gopor, Gurna, Hiemgur, Mufurlo, Oriog, Pulumar, Raliamar, Ruggion, Uhulrig, Ungrin.</p>
