--- a/data/ancestries/sQfjTMDaZbT9DThq.htm
+++ b/data/ancestries/sQfjTMDaZbT9DThq.htm
@@ -67,5 +67,5 @@ gobelins choisissent ainsi de vénérer Cayden Cailéan.</p>
 <p>Les gobelins ont souvent un historique d’acrobate, de criminel, de bateleur, de gladiateur, de chasseur ou d’enfant des rues. Vous pouvez envisager de devenir un alchimiste, étant donné l’amour que les gobelins vouent au feu, ou un barde, vu qu’ils adorent chanter. Les gobelins sont des survivants acharnés et incarnent souvent des roublards qui rôdent dans les ombres, mais leur nature charismatique peut également les pousser à se lancer dans une carrière magique en devenant ensorceleurs.</p>
 <h2>Noms</h2>
 <p>Les gobelins se choisissent des noms simples. Un bon nom doit pouvoir se prononcer facilement, être assez court pour qu’on le crie sans s’essouffler et avoir bon goût dans la bouche. Celui qui choisit le nom se décide souvent pour un mot qui rime avec quelque chose qu’il aime, ce qui permettra d’écrire plus facilement des chansons. La culture gobeline ne possédant pas réellement de tradition à ce sujet, les enfants choisissent généralement leur propre nom une fois qu’ils sont assez âgés pour articuler une approximation de langage.</p>
-<h3><span style="text-decoration: underline;">Simples noms</span></h3>
+<h3>Simples noms</h3>
 <p>Ak, Bokker, Frum, Guzmuk, Krobby, Loohi, Mazmord, Neeka, Omgot, Ranzak, Rickle, Tup, Wakla, Yonk, Zibini</p>
