--- a/data/ancestries/yFoojz6q3ZjvceFw.htm
+++ b/data/ancestries/yFoojz6q3ZjvceFw.htm
@@ -58,5 +58,5 @@ Nom: Azarketi
 <p>Les azarketis possèdent des croyances et des valeurs très variables, comme la mise en évidence de leurs grandes divergences d'allégeances ; ainsi, les azarketis peuvent être de tout alignement.</p>
 <h2>Noms</h2>
 <p>Les azarketis prennent souvent le nom de caractéristiques nautiques, climatiques ou géographiques qui se révèlent importantes pour la famille de l'azarketi. D'autres groupes d'azarketis vont choisir des noms humains pour encourager l'intégration au sein des cultures de la surface. Certains noms azarketis se sont transmis au travers de tant de générations qu'ils utilisent toujours des racines azlantes ou font référence à des étendues d'eau qui n'existent plus depuis longtemps.</p>
-<h3><span style="text-decoration: underline;">Exemples de Noms</span></h3>
+<h3>Exemples de Noms</h3>
 <p>Alizée, Cascade, Delta, Face au vent, Foc, Ilani, Inkua, Lagon, Lobay, Marine, Marée, Port, Poupe, Zarket</p>
