--- a/data/ancestries/4BL5wf1VF9feC2rY.htm
+++ b/data/ancestries/4BL5wf1VF9feC2rY.htm
@@ -1,7 +1,6 @@
 Name: Kitsune
 Nom: Kitsune
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><em>Kitsune are a charismatic and witty people with a connection to the spiritual that grants them many magical abilities, chiefly the power to shapechange into other forms. Whether they pass unseen among other peoples or hold their tails high, kitsune are clever observers of the societies around them.</em></p>
