--- a/data/ancestries/972EkpJOPv9KkQIW.htm
+++ b/data/ancestries/972EkpJOPv9KkQIW.htm
@@ -68,5 +68,5 @@ Nom: Homme-félin (félide)
 <p>Les historiques typiques des hommes félins incluent ceux d'acrobate, d'artiste, de parieur, de chasseur, de nomade, de guide, de bandit, de coursier, d'insurgé, d'éclaireur et de chasseur de racines. La curiosité propre aux hommes-félins et leur agilité les rendent excellents comme bretteurs, bardes, guerrier et comme roublards. Leur amour du monde naturel et celui de la découverte des secrets de tous types en conduisent de nombreux à devenir enquêteurs, druides ou ensorceleurs.</p>
 <h2>Noms</h2>
 <p>Les hommes-félins se voient donner des courts noms dans leur jeunesse. À l'adolescence les hommes-félins sont libres de choisir un nom différent lorsqu'ils partent de la maison la première fois, bien que certains se bornent à continuer à utiliser le premier nom qui leur a été donné et auquel il se sont habitués. Les hommes-félins adorent ajouter des titres et des noms honorifiques à leurs noms. Certains hommes-félins utilisent exclusivement leurs titres avec ceux qui ne sont pas hommes-félins et deviennent ainsi connus par leurs épithètes comme Six destins, Tueur de fiélon ou cape de brume.</p>
-<h3><span style="text-decoration: underline;">Exemples de Noms</span></h3>
+<h3>Exemples de Noms</h3>
 <p>Alyara, Crinto, Drewan, Espes, Ferrus, Gerran, Halhat, Hoya, Ruun, Sevastin, Tespa, Yonsol, Zakkar, Zathra</p>
