--- a/data/feats/archetype-04-CZQgH17ZxoBiVXLa.htm
+++ b/data/feats/archetype-04-CZQgH17ZxoBiVXLa.htm
@@ -2,11 +2,11 @@ Name: Ka Stone Ritual
 Nom: Rituel de la pierre Ka
 PrereqEN: |Living Monolith Dedication|a sphinx or living monolith with this feat performs a ritual with you
 PrereqFR: Dévouement de monolithe vivant|un sphinx ou un monolithe vivant doté de ce don accompli un rituel avec vous
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Avantage: 
+
 ------ Description (en) ------
 <p>You inscribe your true name on your <em>ka stone</em>, as well as oaths to gods and pharaohs, and embed it in your forehead in a special ritual with a sphinx or with a living monolith who already has this feat. The <em>ka stone</em> is an invested magic item that you automatically invest each day. It can't be removed without your permission, nor can it be dispelled, and you can never lose investiture in the ka stone. Its Bulk is negligible.<br /><br />The ka stone grants you a +1 item bonus to saves against death effects and negative effects, which increases to +2 at 8th level, +3 at 14th level, and +4 at 20th level.</p>
 <hr />
@@ -17,6 +17,6 @@ Avantage:
 <p>Vous inscrivez votre véritable nom sur votre pierre de ka, ainsi que des serments prêtés aux dieux et aux pharaons, puis incrustez la pierre dans votre front grâce à un rituel spécial accompli avec un sphinx ou un monolithe vivant disposant déjà de ce don. La pierre de ka est un objet magique investi que vous investissez automatiquement chaque jour. Il est impossible de retirer la pierre sans votre permission. Elle ne peut pas être dissipée et vous ne pouvez pas perdre votre investiture avec elle. Son Encombrement est négligeable.</p>
 <p>La pierre de ka vous donne un bonus d’objet de +1 aux jets de sauvegarde contre les effets de mort et les effets négatifs. Ce bonus passe à +2 au niveau 8, +3 au niveau 14 et +4 au niveau 20. </p>
 <hr />
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">2</span>(imaginer)</span> ou un autre type d’activation s’il a été spécifié</p>
+<p><strong>Activation</strong> <span class="pf2-icon">2</span> (imaginer) ou un autre type d’activation s’il a été spécifié</p>
 <p><strong>Fréquence</strong> chaque jour, un nombre de fois égal au nombre de dons que vous possédez grâce à l’archétype de monolithe vivant</p>
 <p><strong>Effet</strong> Vous lancez @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement} sur vous-même ou vous utilisez un autre pouvoir activable offert par un don de monolithe vivant obtenu ultérieurement.</p>
