--- a/data/feats/class-01-4HgKmqTrXYZJ4fyj.htm
+++ b/data/feats/class-01-4HgKmqTrXYZJ4fyj.htm
@@ -1,10 +1,10 @@
 Name: Animal Companion (Druid)
-Nom: 
+Nom: Compagnon animal (Druide)
 PrereqEN: |animal order
-PrereqFR: 
-État: auto-trad
+PrereqFR: ordre animal
+État: officielle
 
 ------ Description (en) ------
 <p>You gain the service of a young animal companion that travels with you on your adventure and obeys any simple commands you give it to the best of your abilities.</p>
 ------ Description (fr) ------
-Vous gagnez les services d'un jeune compagnon animal qui voyage avec vous dans votre aventure et obéit à tous les ordres simples que vous lui donnez au mieux de vos capacités ;
+<p>Vous obtenez les services d’un jeune compagnon animal qui vous accompagne lors de vos aventures et obéit de son mieux aux ordres simples que vous lui donnez.</p>
