--- a/data/feats/class-01-DqD7htz8Sd1dh3BT.htm
+++ b/data/feats/class-01-DqD7htz8Sd1dh3BT.htm
@@ -2,14 +2,12 @@ Name: Gorilla Stance
 Nom: Posture de gorille
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You lower yourself to the ground and take an imposing, knuckle-walking stance.
 Avantage: Vous vous abaissez au sol et prenez une position imposante, en marchant sur les jointures.
------- Benefits and spoiler ----
-Avantage: Vous vous abaissez au sol et prenez une position imposante, en marchant sur les jointures.
+
 ------ Description (en) ------
 <p>You lower yourself to the ground and take an imposing, knuckle - walking stance.</p>
 <p>While in this stance, the only Strikes you can make are gorilla slam unarmed attacks. These deal 1d8 bludgeoning damage; are in the brawling group; and have the backswing, forceful, grapple, nonlethal, and unarmed traits.</p>
@@ -17,6 +15,6 @@ Avantage: Vous vous abaissez au sol et prenez une position imposante, en marchan
 <p>@Compendium[pf2e.feat-effects.RozqjLocahvQWERr]{Stance: Gorilla Stance}</p>
 ------ Description (fr) ------
 <p>Vous vous baissez jusqu'à toucher le sol et prenez une posture imposante en marchant sur vos poignets.</p>
-<p>Lorque vous êtes dans cette posture, Les seules Frappes que vous pouvez porter sont des attaques à mains nues de coups du gorille. Elles infligent <a class="inline-roll roll" data-mode="roll" data-flavor="contondants" data-formula="1d8" title="contondants"><i class="fas fa-dice-d20"></i>1d8</a> dégâts contondants; elles sont dans le groupe pugilat et possèdent les traits à mains nues, prise d'élan, percutant, saisir et non-létal.</p>
+<p>Lorque vous êtes dans cette posture, Les seules Frappes que vous pouvez porter sont des attaques à mains nues de coups du gorille. Elles infligent 1d8 dégâts contondants; elles sont dans le groupe pugilat et possèdent les traits à mains nues, prise d'élan, percutant, saisir et non-létal.</p>
 <p>Lorsque vous êtes dans la Posture du gorille, vous obtenez un bonus de circonstances de +2 aux tests d'Athlétisme pour @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Grimper} et si vous obtenez une réussite sur un test d'Athlétisme pour Grimper, vous obtenez une réussite critique à la place.</p>
 <p>@Compendium[pf2e.feat-effects.RozqjLocahvQWERr]{Posture : Posture du gorille}</p>
