--- a/data/feats/class-01-Gw0wGXikhAhiGoud.htm
+++ b/data/feats/class-01-Gw0wGXikhAhiGoud.htm
@@ -2,14 +2,12 @@ Name: Twin Takedown
 Nom: Agression jumelée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You swiftly attack your hunted prey with both weapons.
 Avantage: Vous attaquez rapidement votre proie avec les deux armes.
------- Benefits and spoiler ----
-Avantage: Vous attaquez rapidement votre proie avec les deux armes.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
 <p><strong>Requirements</strong> You are wielding two melee weapons, each in a different hand</p>
