--- a/data/feats/class-01-YG2RxXE9SMfwo6wP.htm
+++ b/data/feats/class-01-YG2RxXE9SMfwo6wP.htm
@@ -2,14 +2,12 @@ Name: Monastic Archer Stance
 Nom: Posture de l'archer monastique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You enter a specialized stance for a unique martial art centered around the use of a bow.
 Avantage: Vous entrez dans une posture spécialisée pour un art martial unique centré sur l'utilisation d'un arc.
------- Benefits and spoiler ----
-Avantage: Vous entrez dans une posture spécialisée pour un art martial unique centré sur l'utilisation d'un arc.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored and wielding a longbow, shortbow, or a bow with the monk trait.</p>
 <hr />
