--- a/data/feats/class-01-f2Pl5dWEL9ZvEyI1.htm
+++ b/data/feats/class-01-f2Pl5dWEL9ZvEyI1.htm
@@ -2,14 +2,12 @@ Name: Animal Companion
 Nom: Compagnon animal
 PrereqEN: |animal order
 PrereqFR: ordre de l’animal
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You gain the service of a young animal companion that travels with you.
 Avantage: Vous bénéficiez du service d'un jeune compagnon animal qui voyage avec vous.
------- Benefits and spoiler ----
-Avantage: Vous bénéficiez du service d'un jeune compagnon animal qui voyage avec vous.
+
 ------ Description (en) ------
 <p>You gain the service of a young animal companion that travels with you on your adventure and obeys any simple commands you give it to the best of your abilities.</p>
 ------ Description (fr) ------
