--- a/data/feats/class-01-1JnERVwnPtX620f2.htm
+++ b/data/feats/class-01-1JnERVwnPtX620f2.htm
@@ -1,8 +1,8 @@
 Name: Animal Companion (Ranger)
-Nom: 
+Nom: Compagnon animal (Rôdeur)
 PrereqEN: 
 PrereqFR: 
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 <p>You gain the service of a young animal companion that travels with you on your adventure and obeys any simple commands you give it to the best of your abilities.</p>
@@ -13,10 +13,10 @@ PrereqFR:
 <li>@Compendium[pf2e.feat-effects.mNk0KxsZMFnDjUA0]{Effect: Hunter's Edge, Precision}</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous gagnez les services d'un jeune compagnon animal qui voyage avec vous dans votre aventure et obéit à tous les ordres simples que vous lui donnez au mieux de vos capacités.</p>
-<p>Lorsque vous @Compendium[pf2e.actionspf2e.JYi4MnsdFu618hPm]{Chasse de proie}, votre compagnon animal gagne les bénéfices de l'action et votre @Compendium[pf2e.classfeatures.mzkkj9LEWjJPBhaq]{avantage du chasseur} si vous en avez un.</p>
+<p>Vous obtenez les services d’un jeune compagnon animal qui vous accompagne lors de vos aventures et obéit de son mieux aux ordres simples que vous lui donnez.</p>
+<p>Lorsque vous @Compendium[pf2e.actionspf2e.JYi4MnsdFu618hPm]{Chassez une proie}, votre compagnon animal obtient les avantages de l'action et votre @Compendium[pf2e.classfeatures.mzkkj9LEWjJPBhaq]{Spécialité du chasseur} si vous en avez un.</p>
 <ul>
-<li>@Compendium[pf2e.feat-effects.uXCU8GgriUjuj5FV]{Effet : Arête du chasseur, Rafale}</li>
-<li>@Compendium[pf2e.feat-effects.ltIvO9ZQlmqGD89Y]{Effet : Arête du chasseur, Outwit}</li>
-<li>@Compendium[pf2e.feat-effects.mNk0KxsZMFnDjUA0]{Effet : Arête du chasseur, Précision}</li>
+<li>@Compendium[pf2e.feat-effects.uXCU8GgriUjuj5FV]{Effet : Spécialité du chasseur, Déluge}</li>
+<li>@Compendium[pf2e.feat-effects.ltIvO9ZQlmqGD89Y]{Effet : Spécialité du chasseur, Ruse}</li>
+<li>@Compendium[pf2e.feat-effects.mNk0KxsZMFnDjUA0]{Effet : Spécialité du chasseur, Précision}</li>
 </ul>
