--- a/data/feats/class-01-7FRYyKXDKjGoANYj.htm
+++ b/data/feats/class-01-7FRYyKXDKjGoANYj.htm
@@ -2,14 +2,12 @@ Name: Stumbling Stance
 Nom: Posture chancelante
 PrereqEN: |trained in Deception
 PrereqFR: qualifié en Duperie
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You enter a seemingly unfocused stance that mimics the movements of the inebriated—bobbing, weaving, leaving false openings, and distracting your enemies from your true movements.
-Avantage: Vous adoptez une position apparemment déconcentrée qui imite les mouvements de l'ivrogne : vous barbottez, vous vous faufilez, vous laissez de fausses ouvertures et vous distrayez vos ennemis de vos véritables mouvements.
------- Benefits and spoiler ----
-Avantage: Vous adoptez une position apparemment déconcentrée qui imite les mouvements de l'ivrogne : vous barbottez, vous vous faufilez, vous laissez de fausses ouvertures et vous distrayez vos ennemis de vos véritables mouvements.
+Avantage: Vous adoptez une position apparemment déconcentrée qui imite les mouvements de l'ivrogne : vous chancelez, vous vous faufilez, vous laissez de fausses ouvertures et vous distrayez vos ennemis de vos véritables mouvements.
+
 ------ Description (en) ------
 <p>You enter a seemingly unfocused stance that mimics the movements of the inebriated-bobbing, weaving, leaving false openings, and distracting your enemies from your true movements.</p>
 <p>While in this stance, you gain a +1 circumstance bonus to Deception checks to @Compendium[pf2e.actionspf2e.QNAVeNKtHA0EUw4X]{Feint}. The only Strikes you can make are stumbling swing unarmed attacks. These deal 1d8 bludgeoning damage; are in the brawling group; and have the agile, backstabber, finesse, nonlethal, and unarmed traits.</p>
