--- a/data/feats/class-01-8sy3sHwOHS4ImwvJ.htm
+++ b/data/feats/class-01-8sy3sHwOHS4ImwvJ.htm
@@ -2,13 +2,10 @@ Name: Dragon Stance
 Nom: Posture du dragon
 PrereqEN: |You are unarmored
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You enter the stance of a dragon and make powerful leg strikes like a lashing dragon’s tail.
-Avantage: Vous vous mettez dans la position d'un dragon et faites de puissants coups de jambe comme la queue d'un dragon.
------- Benefits and spoiler ----
 Avantage: Vous vous mettez dans la position d'un dragon et faites de puissants coups de jambe comme la queue d'un dragon.
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored</p>
