--- a/data/feats/class-01-AN9jY1JVcU20Qdw6.htm
+++ b/data/feats/class-01-AN9jY1JVcU20Qdw6.htm
@@ -2,14 +2,12 @@ Name: Wolf Stance
 Nom: Posture du loup
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You enter the stance of a wolf, low to the ground with your hands held like fanged teeth.
 Avantage: Vous adoptez la posture du loup, au ras du sol, les mains en forme de crocs.
------- Benefits and spoiler ----
-Avantage: Vous adoptez la posture du loup, au ras du sol, les mains en forme de crocs.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored</p>
 <hr />
