--- a/data/feats/class-01-VCjAlOvjNvFJOsG5.htm
+++ b/data/feats/class-01-VCjAlOvjNvFJOsG5.htm
@@ -2,13 +2,10 @@ Name: Tiger Stance
 Nom: Posture du tigre
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You enter the stance of a tiger and can make tiger claw attacks.
-Avantage: Vous entrez dans la posture d'un tigre et pouvez faire des attaques de griffes de tigre.
------- Benefits and spoiler ----
 Avantage: Vous entrez dans la posture d'un tigre et pouvez faire des attaques de griffes de tigre.
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored</p>
