--- a/data/feats/class-01-rbiMK71SvGZGRLJ1.htm
+++ b/data/feats/class-01-rbiMK71SvGZGRLJ1.htm
@@ -2,14 +2,12 @@ Name: Rain of Embers Stance
 Nom: Posture de la pluie de charbons ardents
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You enter the stance of an enraged phoenix, holding your fingers as rigid as deadly talons while moving with quick, flickering gestures that dance with biting flames
 Avantage: Vous adoptez la posture d'un phénix enragé, tenant vos doigts aussi rigides que des serres mortelles tout en vous déplaçant avec des gestes rapides et vacillants qui dansent avec des flammes mordantes.
------- Benefits and spoiler ----
-Avantage: Vous adoptez la posture d'un phénix enragé, tenant vos doigts aussi rigides que des serres mortelles tout en vous déplaçant avec des gestes rapides et vacillants qui dansent avec des flammes mordantes.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored.</p>
 <hr />
@@ -17,8 +15,8 @@ Avantage: Vous adoptez la posture d'un phénix enragé, tenant vos doigts aussi 
 <p>While in Rain of Embers Stance, you gain a +1 status bonus to AC and fire resistance equal to half your level (minimum 1).</p>
 <p>@Compendium[pf2e.feat-effects.Im5JBInybWFbHEYS]{Stance: Rain of Embers Stance}</p>
 ------ Description (fr) ------
-<p><strong>Requirements</strong> Vous ne portez pas d'armure.</p>
+<p><strong>Conditions</strong> Vous ne portez pas d'armure.</p>
 <hr />
-<p>Vous entrez dans la posture du phénix enragé, faisant de vos doigts des ergots aussi rigides que mortels en les déplaçant avec de rapides, et virevoltants gestes qui virevoltent avec des flammes dansantes. Les seules Frappes que vous pouvez faire sont des frappes d'ergots de feu. Elles infligent <a class="inline-roll roll" data-mode="roll" data-flavor="" data-formula="1d4" title="1d4"><i class="fas fa-dice-d20"></i>1d4</a> dégâts de feu ; sont dans le groupe pugilat ; et ont les traits agile, finesse, feu, non-létal et mains nues.</p>
+<p>Vous entrez dans la posture du phénix enragé, faisant de vos doigts des ergots aussi rigides que mortels en les déplaçant avec de rapides, et virevoltants gestes qui virevoltent avec des flammes dansantes. Les seules Frappes que vous pouvez faire sont des frappes d'ergots de feu. Elles infligent 1d4 dégâts de feu ; sont dans le groupe pugilat ; et ont les traits agile, finesse, feu, non-létal et mains nues.</p>
 <p>Tant que vous gardez la Posture des charbons ardents, vous obtenez un bonus de statut de +1 à la CA et une résistance au feu de 1 + la moitié de votre niveau (minimum 1).</p>
 <p>@Compendium[pf2e.feat-effects.Im5JBInybWFbHEYS]{Posture: Pluie de charbons ardents}</p>
