--- a/data/feats/class-01-bf7NCeKqDClaqhTR.htm
+++ b/data/feats/class-01-bf7NCeKqDClaqhTR.htm
@@ -2,14 +2,12 @@ Name: Crane Stance
 Nom: Posture de la grue
 PrereqEN: |You are unarmoured
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You enter the stance of a crane, holding your arms in an imitation of a crane’s wings.
 Avantage: Vous entrez dans la position de la grue, en tenant vos bras dans une imitation des ailes de la grue.
------- Benefits and spoiler ----
-Avantage: Vous entrez dans la position de la grue, en tenant vos bras dans une imitation des ailes de la grue.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored</p>
 <hr />
