--- a/data/feats/class-02-19OLlTrxvEtDAOHc.htm
+++ b/data/feats/class-02-19OLlTrxvEtDAOHc.htm
@@ -2,14 +2,12 @@ Name: Aggressive Block
 Nom: Blocage agressif
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You push back as you block the attack, knocking your foe away or off balance.
 Avantage: En bloquant l'attaque, vous repoussez votre adversaire et le déséquilibrez.
------- Benefits and spoiler ----
-Avantage: En bloquant l'attaque, vous repoussez votre adversaire et le déséquilibrez.
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> You use the Shield Block reaction, and the opponent that triggered Shield Block is adjacent to you and is your size or smaller.</p>
 <hr />
@@ -20,5 +18,5 @@ Avantage: En bloquant l'attaque, vous repoussez votre adversaire et le déséqui
 <p><strong>Déclencheur</strong> Vous effectuez la réaction Blocage au bouclier et l’adversaire qui l’a déclenchée est adjacent à vous et sa taille est égale ou inférieure à la vôtre.</p>
 <hr />
 <p>Vous bloquez l’attaque en repoussant votre adversaire ou en le déséquilibrant.</p>
-<p>Vous utilisez votre bouclier pour repousser la créature à l’origine du déclenchement, soit en la @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Poussant} automatiquement de 1,50 m ou en la prenant au dépourvu jusqu’au début de votre prochain tour.</p>
-<p>La créature à l’origine du déclenchement choisit si elle est déplacée ou @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu}. Si elle choisit d’être déplacée, c’est vous qui déterminez la direction de son déplacement. Si la créature Poussée cogne un objet solide, entre dans une case de terrain difficile ou dans l’espace d’une autre créature à cause de ce déplacement, elle est forcément prise au dépourvu et ne peut pas être déplacée.</p>
+<p>Vous utilisez votre bouclier pour repousser la créature à l’origine du déclenchement, soit en la @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Poussant} automatiquement de 1,50 m ou en la rendant @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} jusqu’au début de votre prochain tour.</p>
+<p>La créature à l’origine du déclenchement choisit si elle est déplacée ou @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu}. Si elle choisit d’être déplacée, c’est vous qui déterminez la direction de son déplacement. Si la créature Poussée cogne un objet solide, entre dans une case de terrain difficile ou dans l’espace d’une autre créature à cause de ce déplacement, elle est forcément Prise au dépourvu et ne peut pas être déplacée.</p>
