--- a/data/feats/class-02-UiQbjeqBUFjUtgUR.htm
+++ b/data/feats/class-02-UiQbjeqBUFjUtgUR.htm
@@ -2,14 +2,12 @@ Name: Assisting Shot
 Nom: Tir de soutien
 PrereqEN: |You are wielding a ranged weapon
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: With a quick shot, you interfere with a foe in combat.
 Avantage: Avec un tir rapide, vous interférez avec un ennemi en combat.
------- Benefits and spoiler ----
-Avantage: Avec un tir rapide, vous interférez avec un ennemi en combat.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a ranged weapon.</p>
 <hr />
