--- a/data/feats/class-02-FrlhErsjR6fEn6kX.htm
+++ b/data/feats/class-02-FrlhErsjR6fEn6kX.htm
@@ -2,16 +2,15 @@ Name: Minor Magic
 Nom: Magie mineure
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You’ve dabbled in a variety of tricks, gaining minor magical abilities from a particular tradition.
 Avantage: Vous vous êtes essayé à une variété de tours, obtenant des capacités magiques mineures à partir d'une tradition particulière.
------- Benefits and spoiler ----
-Avantage: Vous vous êtes essayé à une variété de tours, obtenant des capacités magiques mineures à partir d'une tradition particulière.
+
 ------ Description (en) ------
 <p>You've dabbled in minor magical abilities. Choose arcane, divine, occult, or primal magic, and gain two cantrips from the common cantrips that are available in that tradition. Your key spellcasting ability is Charisma, and you're trained in spell attack rolls and DCs for the tradition of your chosen cantrips..</p>
 ------ Description (fr) ------
 <p>Vous avez touché à de nombreux domaines et avez ainsi acquis des pouvoirs mineurs dans une tradition magique.</p>
-<p>Choisissez une des traditions magiques suivantes, dans laquelle vous gagnez deux tours de magie sélectionnés dans la liste des tours de magie communs : arcanique, divine, occulte ou primordiale. Vous utilisez le Charisme comme caractéristique essentielle d’incantation. Vous êtes formé aux DD et aux jets d’attaque de sorts issus de la tradition des tours de magie que vous avez choisis.</p>
+<p>Choisissez une des traditions magiques suivantes, dans laquelle vous gagnez deux tours de magie sélectionnés dans la liste des tours de magie courants : arcanique, divine, occulte ou primordiale.</p>
+<p>Vous utilisez le Charisme comme caractéristique essentielle d’incantation. Vous êtes formé aux DD et aux jets d’attaque de sorts issus de la tradition des tours de magie que vous avez choisis.</p>
