--- a/data/feats/class-02-rTkr1EqpAN6YtnAh.htm
+++ b/data/feats/class-02-rTkr1EqpAN6YtnAh.htm
@@ -2,14 +2,12 @@ Name: Lunge
 Nom: Fente
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Extending your body to its limits, you attack an enemy that would normally be beyond your reach.
 Avantage: En étendant votre corps jusqu'à ses limites, vous attaquez un ennemi qui serait normalement hors de votre portée.
------- Benefits and spoiler ----
-Avantage: En étendant votre corps jusqu'à ses limites, vous attaquez un ennemi qui serait normalement hors de votre portée.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a melee weapon</p>
 <hr />
