--- a/data/feats/class-02-sgo7J9BVofBqwlsF.htm
+++ b/data/feats/class-02-sgo7J9BVofBqwlsF.htm
@@ -2,14 +2,12 @@ Name: Favored Terrain
 Nom: Environnement de prédilection
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You have studied a specific terrain to overcome its challenges.
 Avantage: Vous avez étudié un terrain spécifique pour en surmonter les difficultés.
------- Benefits and spoiler ----
-Avantage: Vous avez étudié un terrain spécifique pour en surmonter les difficultés.
+
 ------ Description (en) ------
 <p>You have studied a specific terrain to overcome its challenges. Choose aquatic, arctic, desert, forest, mountain, plains, sky, swamp, or underground as your favored terrain.</p>
 <p>When in that terrain, you can ignore the effects of non-magical diffcult terrain.</p>
@@ -29,4 +27,18 @@ Avantage: Vous avez étudié un terrain spécifique pour en surmonter les diffic
 <p>@Compendium[pf2e.feat-effects.HKPmrxkZwHRND5Um]{Favored Terrain (Increase Swim Speed)}</p>
 ------ Description (fr) ------
 <p>Vous avez étudié un type d’environnement particulier pour mieux surmonter ses difficultés.</p>
-<p>Choisissez votre environnement de prédilection parmi les suivants : aquatique, arctique, désert, forêt, montagne, plaine, ciel, marais ou souterrain. Dans cet environnement, vous ignorez les effets des terrains difficiles non magiques. Si vous avez la capacité de classe déplacement facilité en milieu naturel, vous bénéficiez d’un second avantage, déterminé par votre choix, lorsque vous évoluez dans votre environnement de prédilection.</p>
+<p>Choisissez votre environnement de prédilection parmi les suivants : aquatique, arctique, désert, forêt, montagne, plaine, ciel, marais ou souterrain. Dans cet environnement, vous ignorez les effets des terrains difficiles non magiques.</p>
+<p>Si vous avez la capacité de classe déplacement facilité en milieu naturel, vous bénéficiez d’un second avantage, déterminé par votre choix, lorsque vous évoluez dans votre environnement de prédilection.</p>
+<ul>
+    <li><strong>Aquatic</strong> You gain a swim Speed equal to your Speed. If you already had a swim Speed, you gain a +10-foot status bonus to your swim Speed.</li>
+    <li><strong>Arctic</strong> You need to eat and drink only one-tenth as much as usual, you aren’t affected by severe or extreme cold, and you can walk across ice and snow at full Speed without needing to Balance.</li>
+    <li><strong>Desert</strong> You need to eat and drink only one-tenth as much as usual, you aren’t affected by severe or extreme heat, and you can walk along sand at full Speed without needing to Balance.</li>
+    <li><strong>Forest, Mountain, or Underground</strong> You gain a climb Speed equal to your Speed. If you already had a climb Speed, you gain a +10-foot status bonus to your climb Speed.</li>
+    <li><strong>Plains</strong> You gain a +10-foot status bonus to your land Speed.</li>
+    <li><strong>Sky</strong> You gain a +10-foot status bonus to your fly Speed, if you have one.</li>
+    <li><strong>Swamp</strong> You can move across bogs at full Speed, even if they are deep enough to be greater difficult terrain or to normally require you to Swim.</li>
+    </ul>
+<p>@Compendium[pf2e.feat-effects.sDftJWPPSUeSZD3A]{Environnement de prédilection (Obtenir une vitesse d'escalade)}</p>
+<p>@Compendium[pf2e.feat-effects.IpRfT9lL3YR6MH6w]{Environnement de prédilection (Améliorer la vitesse d'escalade Climb Speed)}</p>
+<p>@Compendium[pf2e.feat-effects.OhLcaJeQy4Nf5Mwo]{Environnement de prédilection (Obtenir une vitesse de nage)}</p>
+<p>@Compendium[pf2e.feat-effects.HKPmrxkZwHRND5Um]{Environnement de prédilection (Augmenter la vitesse de nage)}</p>
