--- a/data/feats/class-02-xoIxiRtBVHV27Rvd.htm
+++ b/data/feats/class-02-xoIxiRtBVHV27Rvd.htm
@@ -2,14 +2,12 @@ Name: Divine Aegis
 Nom: Égide divine
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You summon divine energy to shield yourself, offering protection against other traditions but leaving you exposed to other divine effects.
 Avantage: Vous invoquez l'énergie divine pour vous protéger, offrant une protection contre les autres traditions mais vous laissant exposé à d'autres effets divins.
------- Benefits and spoiler ----
-Avantage: Vous invoquez l'énergie divine pour vous protéger, offrant une protection contre les autres traditions mais vous laissant exposé à d'autres effets divins.
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> You attempt a saving throw against a magical effect, but you haven't rolled yet.</p>
 <hr />
@@ -21,3 +19,4 @@ Avantage: Vous invoquez l'énergie divine pour vous protéger, offrant une prote
 <hr />
 <p>Vous invoquez de l'énergie divine pour faire rempart, vous offrant une protection contre les autres traditions mais vous laissant exposé aux effets divins.</p>
 <p>Jusqu'au début de votre prochain tour, vous obtenez un bonus de circonstances de +1 aux jets de sauvegarde contre les effets magiques non divins, mais subissez aussi une pénalité de circonstances de –1 aux jets de sauvegarde contre les effets divins.</p>
+<p>@Compendium[pf2e.feat-effects.K1IgNCf3Hh2EJwQ9]{Effet: Égide divine}</p>
