--- a/data/feats/class-02-sgo7J9BVofBqwlsF.htm
+++ b/data/feats/class-02-sgo7J9BVofBqwlsF.htm
@@ -30,8 +30,8 @@ Avantage: Vous avez étudié un terrain spécifique pour en surmonter les diffic
 <p>Choisissez votre environnement de prédilection parmi les suivants : aquatique, arctique, désert, forêt, montagne, plaine, ciel, marais ou souterrain. Dans cet environnement, vous ignorez les effets des terrains difficiles non magiques.</p>
 <p>Si vous avez la capacité de classe déplacement facilité en milieu naturel, vous bénéficiez d’un second avantage, déterminé par votre choix, lorsque vous évoluez dans votre environnement de prédilection.</p>
 <ul>
-    <li><strong>Aquatic</strong> You gain a swim Speed equal to your Speed. If you already had a swim Speed, you gain a +10-foot status bonus to your swim Speed.</li>
-    <li><strong>Arctic</strong> You need to eat and drink only one-tenth as much as usual, you aren’t affected by severe or extreme cold, and you can walk across ice and snow at full Speed without needing to Balance.</li>
+<li><strong>Aquatique</strong> YVous obtenez une vitesse de nage égale à votre Vitesse. Si vous avez déjà une vitesse de nage, vous obtenez un bonus de statut de +3m à votre vitesse de nage.</li>
+<li><strong>Arctique</strong> You need to eat and drink only one-tenth as much as usual, you aren’t affected by severe or extreme cold, and you can walk across ice and snow at full Speed without needing to Balance.</li>
     <li><strong>Desert</strong> You need to eat and drink only one-tenth as much as usual, you aren’t affected by severe or extreme heat, and you can walk along sand at full Speed without needing to Balance.</li>
     <li><strong>Forest, Mountain, or Underground</strong> You gain a climb Speed equal to your Speed. If you already had a climb Speed, you gain a +10-foot status bonus to your climb Speed.</li>
     <li><strong>Plains</strong> You gain a +10-foot status bonus to your land Speed.</li>
