--- a/data/feats/class-04-ALbosSUygdq4T1Yk.htm
+++ b/data/feats/class-04-ALbosSUygdq4T1Yk.htm
@@ -2,14 +2,12 @@ Name: Poison Weapon
 Nom: Arme empoisonnée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You apply poison to a weapon.
 Avantage: Vous appliquez du poison à une arme.
------- Benefits and spoiler ----
-Avantage: Vous appliquez du poison à une arme.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a piercing or slashing weapon</p>
 <hr />
