--- a/data/feats/class-04-C3MgEkPNaIhTddbr.htm
+++ b/data/feats/class-04-C3MgEkPNaIhTddbr.htm
@@ -2,14 +2,12 @@ Name: Peafowl Stance
 Nom: Posture du paon
 PrereqEN: |Monastic Weaponry
 PrereqFR: Armes monacales
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You enter a tall and proud stance while remaining mobile, with all the grace and composure of a peafowl.
 Avantage: Vous adoptez une posture haute et fière tout en restant mobile, avec toute la grâce et le sang-froid d'un paon.
------- Benefits and spoiler ----
-Avantage: Vous adoptez une posture haute et fière tout en restant mobile, avec toute la grâce et le sang-froid d'un paon.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a sword that has the monk <br />trait in one hand.</p>
 <hr />
@@ -21,3 +19,4 @@ Avantage: Vous adoptez une posture haute et fière tout en restant mobile, avec 
 <hr />
 <p>Vous adoptez une posture fière en vous dressant tout en restant mobile avec toute la grâce et le sang froid d'un paon.</p>
 <p>Dans cette posture, les seules @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} que vous pouvez porter sont des Frappes au corps à corps avec l'épée requise. Une fois par round, après que vous ayez touché avec une Frappe portée avec l'épée ayant le trait moine, vous pouvez @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} comme prochaine action en utilisant une action libre.</p>
+<p>@Compendium[pf2e.feat-effects.vjvcccAwdkOLA1Fc]{Posture : Posture du paon}</p>
