--- a/data/feats/class-04-AkV4Jyllo6nlK2Sl.htm
+++ b/data/feats/class-04-AkV4Jyllo6nlK2Sl.htm
@@ -2,14 +2,12 @@ Name: Cobra Stance
 Nom: Posture du Cobra
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You enter a tight stance, coiled up like a lashing cobra with your hands poised as venomous fangs.
 Avantage: Vous adoptez une position serrée, enroulée comme un cobra fougueux, les mains en forme de crocs venimeux.
------- Benefits and spoiler ----
-Avantage: Vous adoptez une position serrée, enroulée comme un cobra fougueux, les mains en forme de crocs venimeux.
+
 ------ Description (en) ------
 <p>You enter a tight stance, coiled up like a lashing cobra with your hands poised as venomous fangs.</p>
 <p>While in this stance, the only Strikes you can make are cobra fang unarmed attacks. These deal 1d4 poison damage; are in the brawling group; and have the agile, deadly d10, finesse, nonlethal, poison, and unarmed traits.</p>
@@ -17,6 +15,6 @@ Avantage: Vous adoptez une position serrée, enroulée comme un cobra fougueux, 
 <p>@Compendium[pf2e.feat-effects.CgxYa0lrLUjS2ZhI]{Stance: Cobra Stance}</p>
 ------ Description (fr) ------
 <p>Vous prenez une posture tendue en spirale comme celle du cobra dressé avec vos mains prêtes comme des crochets venimeux.</p>
-<p>Dans cette posture, Les seules @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} que vous pouvez faire sont les attaques à mains nues des crochets du cobra. Elles infligent [[/r 1d4 #poison]] dégâts de poison ; elles sont dans le groupe pugilat ; elles possèdent les traits à mains nues, agile, finesse, mortel d10, non-létal et poison.</p>
+<p>Dans cette posture, Les seules @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} que vous pouvez faire sont les attaques à mains nues des crochets du cobra. Elles infligent 1d4 dégâts de poison ; elles sont dans le groupe pugilat ; elles possèdent les traits à mains nues, agile, finesse, mortel d10, non-létal et poison.</p>
 <p>Dans la posture du Cobra, vous obtenez un bonus de circonstances de +1 aux jets de Vigueur, au DD de Vigueur et vous obtenez une résistance au poison égale à la moitié de votre niveau.</p>
 <p>@Compendium[pf2e.feat-effects.CgxYa0lrLUjS2ZhI]{Posture: Posture du cobra}</p>
