--- a/data/feats/class-04-K3TasgeZLJQ84qtZ.htm
+++ b/data/feats/class-04-K3TasgeZLJQ84qtZ.htm
@@ -2,15 +2,13 @@ Name: Primal Evolution
 Nom: Évolution primordiale
 PrereqEN: |bloodline that grants primal spells
 PrereqFR: lignage qui accorde des sorts primordiaux
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can call upon the creatures of the wild for aid.
 Avantage: Vous pouvez demander de l'aide aux créatures de la nature.
------- Benefits and spoiler ----
-Avantage: Vous pouvez demander de l'aide aux créatures de la nature.
+
 ------ Description (en) ------
 <p>You can call upon the creatures of the wild for aid. You gain an additional spell slot of your highest level, which you can use only to cast @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Summon Animal} or @Compendium[pf2e.spells-srd.jSRAyd57kd4WZ4yE]{Summon Plant or Fungus}. You can cast either of these spells using that spell slot, even if it they aren't in your spell repertoire.</p>
 ------ Description (fr) ------
-<p>Vous pouvez invoquer des créatures de la nature sauvage pour bénéficier de leur aide. Vous gagnez un emplacement de sort supplémentaire du plus haut niveau que vous pouvez lancer. Vous pouvez l’utiliser uniquement pour lancer <em>convocation d’animal</em> ou <em>convocation de plantes et de champignons</em>. Vous pouvez lancer l’un ou l’autre de ces sorts en utilisant cet emplacement de sort, même si ces sorts ne font pas partie de votre répertoire.</p>
+<p>Vous pouvez invoquer des créatures de la nature sauvage pour bénéficier de leur aide. Vous gagnez un emplacement de sort supplémentaire du plus haut niveau que vous pouvez lancer. Vous pouvez l’utiliser uniquement pour lancer @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d’animal} ou @Compendium[pf2e.spells-srd.jSRAyd57kd4WZ4yE]{convocation de plantes et de champignons}. Vous pouvez lancer l’un ou l’autre de ces sorts en utilisant cet emplacement de sort, même si ces sorts ne font pas partie de votre répertoire.</p>
