--- a/data/feats/class-04-SCDSgeJU7vULvHmo.htm
+++ b/data/feats/class-04-SCDSgeJU7vULvHmo.htm
@@ -2,16 +2,13 @@ Name: Fast Movement
 Nom: Déplacement rapide
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your rage is a frenzy of rapid movements.
-Avantage: Votre rage est une frénésie de mouvements rapides.
------- Benefits and spoiler ----
-Avantage: Votre rage est une frénésie de mouvements rapides.
+Avantage: Vous obtenez +3 m à votre vitesse.
+
 ------ Description (en) ------
 <p>While you are raging, you gain a +10-foot status bonus to your Speed.</p>
 ------ Description (fr) ------
-<p>Votre rage s’exprime par des déplacements plus rapides.</p>
-<p>Quand vous êtes enragé, vous gagnez un bonus de statut de +3 m à votre Vitesse.</p>
+<p>Votre rage s’exprime par des déplacements plus rapides. Quand vous êtes enragé, vous gagnez un bonus de statut de +3 m à votre Vitesse.</p>
